fixed body overflow

--- a/random/credit_multiplier/style.css
+++ b/random/credit_multiplier/style.css
@@ -13,7 +13,7 @@ tfoot,
 body{
     margin: 0px;
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 h1 {
